# exchange

./: .dockerignore  .gitignore  .prettierignore  Cargo.toml  DOCKER.md  README.md  claude.md  docker-compose.yaml  justfile  package.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post-create.sh
.github/actions/setup/: action.yml
.github/workflows/: tests.yml
apps/backend/: .env.defaults  Cargo.toml  Dockerfile  config.toml
apps/backend/.sqlx/: query-2e411b27f4f04a5b4b80a097203efe0cdd4677ff690a8d4d03b553a7c1fc9be0.json  query-4a3d28856c6b3ca01e8f84bca59b40bb9446328c1516abc9d9fd60b7aa0d0f85.json  query-a5a4988f52eddf432232c0f9e52542cfd5b5bfef083c888f2a3564a4afd49393.json
apps/backend/benches/: balance_benchmarks.rs  latency_benchmarks.rs  matching_benchmarks.rs
apps/backend/scripts/: exchange.rs
apps/backend/src/: config.rs  errors.rs  lib.rs  main.rs
apps/backend/src/api/rest/: admin.rs  candles.rs  drip.rs  health.rs  info.rs  mod.rs  trade.rs  user.rs
apps/backend/src/api/ws/: client.rs  events.rs  helpers.rs  mod.rs  server.rs  state.rs  subscribe.rs  subscriptions.rs
apps/backend/src/db/: balances.rs  candles.rs  markets.rs  mod.rs  orders.rs  setup.rs  tokens.rs  trades.rs  users.rs
apps/backend/src/db/ch/: mod.rs  schema.sql
apps/backend/src/db/clickhouse/: mod.rs  schema.sql
apps/backend/src/db/migrations/: 20251020040857_init.sql
apps/backend/src/db/pg/: mod.rs
apps/backend/src/db/pg/migrations/: 20251020040857_init.sql
apps/backend/src/db/postgres/migrations/: 20251020040857_init.sql
apps/backend/src/engine/: executor.rs  matcher.rs  mod.rs  orderbook.rs
apps/backend/src/me/: mod.rs
apps/backend/src/models/: api.rs  db.rs  domain.rs
apps/backend/src/utils/: mod.rs
apps/backend/tests/: api_integration_tests.rs  balance_edge_cases_tests.rs  balance_events_tests.rs  candles_integration_tests.rs  clickhouse_schema_tests.rs  db_integration_tests.rs  engine_integration_tests.rs  integration_tests.rs  rest_integration_tests.rs  utils.rs  ws_integration_tests.rs
apps/bots/: .env.defaults  Cargo.toml  Dockerfile  README.md  bots.md  config.toml
apps/bots/src/: config.rs  lib.rs  main.rs
apps/bots/src/bots/: mod.rs  orderbook_mirror.rs  trade_mirror.rs
apps/bots/src/hyperliquid/: client.rs  mod.rs  orderbook.rs  types.rs
apps/bots/src/markets/bp_usdc/: lmsr_market_maker.rs  synthetic_trader.rs
apps/bots/tests/: integration_tests.rs
apps/frontend/: .env.defaults  .env.example  Dockerfile  next.config.ts  package.json
apps/frontend/public/: tradingview-custom.css
apps/frontend/src/app/: layout.tsx  page.tsx
apps/frontend/src/app/admin/: page.tsx
apps/frontend/src/components/: AuthButton.tsx  Balances.tsx  BottomPanel.tsx  CanvasBackground.tsx  FaucetDialog.tsx  LoadingScreen.tsx  MarketHeader.tsx  Orderbook.tsx  PriceChart.tsx  RecentOrders.tsx  RecentTrades.tsx  TradeHistory.tsx  TradePanel.tsx  TradingViewChart.tsx
apps/frontend/src/components/admin/: CreateMarketForm.tsx  CreateTokenForm.tsx  FaucetForm.tsx  InfoPanel.tsx
apps/frontend/src/components/bottom-panel/: Balances.tsx  RecentOrders.tsx  RecentTrades.tsx  index.tsx
apps/frontend/src/components/chart/: TradingViewChart.tsx  chartConfig.ts  tradingview-datafeed.ts  useOrderLines.tsx
apps/frontend/src/components/orderbook-panel/: Orderbook.tsx  OrderbookRow.tsx  TradeRow.tsx
apps/frontend/src/components/trade-panel/: OrderSummary.tsx  OrderTypeSelector.tsx  PriceInput.tsx  SideSelector.tsx  SizeInput.tsx  SubmitButton.tsx  TradePanel.tsx
apps/frontend/src/components/ui/: button.tsx  card.tsx  data-table.tsx  dialog.tsx  input.tsx  pixelated-canvas.tsx  select.tsx  sonner.tsx  table.tsx  tabs.tsx
apps/frontend/src/lib/: api.ts  faucet.ts  format.ts  index.ts  store.ts  tradingview-datafeed.ts  websocket.ts
apps/frontend/src/lib/hooks/: index.ts  useCancelOrder.ts  useMarkets.ts  useOrderbook.ts  usePriceHistory.ts  useTrades.ts  useUserBalances.ts  useUserOrders.ts  useUserTrades.ts
apps/frontend/src/lib/providers/: index.tsx  turnkey-provider.tsx
apps/frontend/src/lib/turnkey/: config.ts  provider.tsx
apps/frontend/src/lib/types/: exchange.ts  openapi.ts  websocket.ts
apps/frontend/src/styles/: globals.css
