[workspace]
resolver = "2"
members = [
    "apps/backend",
    "apps/bots",
    "packages/schema-generator",
    "packages/sdk-rust",
    "packages/test-utils",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.90"

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["ws"] }
bigdecimal = "0.4.9"
chrono = { version = "0.4", features = ["serde", "clock"] }
clickhouse = { version = "0.14", features = ["rustls-tls"] }
config = "0.15"
criterion = { version = "0.7", features = ["html_reports", "async_tokio"] }
dotenvy = "0.15"
env_logger = "0.11"
futures = "0.3"
futures-util = "0.3"
log = "0.4"
reqwest = { version = "0.12", features = ["json"] }
rust_decimal = "1.37"
schemars = { version = "0.8" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid", "migrate", "bigdecimal"] }
testcontainers = "0.25.0"
testcontainers-modules = { version = "0.13.0", features = ["clickhouse", "postgres"] }
thiserror = "2.0"
tokio = { version = "1.42", features = ["full"] }
tokio-test = "0.4"
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
toml = "0.9"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "5.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
uuid = { version = "1.11", features = ["v4", "serde"] }

# Workspace members
backend = { path = "apps/backend" }
exchange-bots = { path = "apps/bots" }
exchange-sdk = { path = "packages/sdk-rust" }
exchange-test-utils = { path = "packages/test-utils" }

# Common configurations for all workspace members
[profile.dev]
incremental = true

[profile.release]
lto = "thin"
codegen-units = 1
