[package]
name = "backend"
version = "0.1.0"
edition = "2021"
rust-version = "1.90"
default-run = "backend"

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["ws"] }
bigdecimal = "0.4.9"
chrono = { version = "0.4", features = ["serde", "clock"] }
clickhouse = { version = "0.14", features = ["rustls-tls"] }
dotenvy = "0.15"
env_logger = "0.11"
futures = "0.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid", "migrate", "bigdecimal"] }
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
utoipa = { version = "5.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
testcontainers = "0.25.0"
testcontainers-modules = { version = "0.13.0", features = ["clickhouse", "postgres"] }
