[package]
name = "exchange-bots"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
default-run = "bots"

[[bin]]
name = "bots"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
backend.workspace = true
exchange-sdk.workspace = true
futures-util.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
